Bug 160526 - An as-character object sitting in a line alone hides, when shifted outside of page boundaries, instead of moving to the next page
Summary: An as-character object sitting in a line alone hides, when shifted outside of...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.8.0 target:24.2.3
Keywords: notBibisectable, regression
Depends on:
Blocks:
 
Reported: 2024-04-05 06:35 UTC by Mike Kaganski
Modified: 2025-01-15 13:25 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
A tall as-char object, shifted outside page boundaries by a floating object, when its wrap set accordingly (4.68 KB, application/vnd.oasis.opendocument.text)
2024-04-05 06:35 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2024-04-05 06:35:13 UTC
Created attachment 193502 [details]
A tall as-char object, shifted outside page boundaries by a floating object, when its wrap set accordingly

Open the attachment, and set the top green object's wrap to "parallel" (or to "page" in older versions).

=> the second blue as-char object disappears, instead of moving to the next page.

If the second paragraph (with the blue object) also contains at least one character (even a space), then the behavior is normal.

This is related to commit 689cead9e0837dc932e3a4cd765f7d319b529018 (tdf#91260 svx, sw: don't paint off-page part of drawing object, 2016-12-07) and commit a4dee94afed9ade6ac50237c8d99a6e49d3bebc1 (tdf#91260: allow textboxes extending beyond the page bottom, 2015-05-13). It is not identical to tdf#154128, because this is not about disappearance, but about not moving to the next page (the as-char must make sure of that, unlike the case with to-character object there, which is tied to the page where its anchor character resides).
Comment 1 Mike Kaganski 2024-04-05 06:45:18 UTC
In fact, the main problem of the as-char object not moving to the next page appeared in version 3.5; it worked fine in 3.4.
Comment 2 Mike Kaganski 2024-04-05 07:20:02 UTC
Regression after commit c5a8a2c3cbcee0175127a0662e3d820ea4deea22
Comment 3 Commit Notification 2024-04-07 16:47:58 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ae9e8f3f6d10b0be2fe5b9b238a531b17e0d67da

tdf#160526, tdf#160549: fix split conditions at page start

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-04-11 09:41:44 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/167be9363ea505b334aa595b273707d7d9217863

tdf#160526, tdf#160549: fix split conditions at page start

It will be available in 24.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Justin L 2024-12-04 16:18:46 UTC
Nice: this also fixed the last two pages of attachment 52130 [details] from bug 41598.